--- a/_posts/2021-02-15-github.io만들기.markdown
+++ b/_posts/2021-02-15-github.io만들기.markdown
@@ -12,6 +12,65 @@ categories: github.io Jekyll Ruby
 
 본격적으로 첫 게시물인만큼 이 글을 쓰기까지의 과정, 즉 Github 블로그 만들기를 하나씩 소개해보려고 한다.
 
+
 1. Repository 생성
+
 <img src="../assets/post_pics/Create_a_new_repository.PNG">
+
+새로운 repository 이름을 [아이디].github.io로 지정하여 생성한다. README 파일은 먼저 만들어 두면 편하다.
+
+
+2. Clone
+
+생성한 repository를 내 로컬로 가져와 clone시킨다. 개인의 깃허브 환경에 따라 다르지만 나는 Visual Studio Code를 활용하여 작업을 하고 있다.
+
+F1버튼 --> `Git: Clone` --> `Clone from GitHub` --> 자신이 생성한 github.io 
+
+clone시킬 폴더를 선택하면 해당 폴더에 생성한 repository(README파일포함)를 확인할 수 있다.
+
+
+3. Jekyll 테마 설치
+
+Github 블로그는 처음부터 자신이 원하는대로 디자인할 수 있지만 Jekyll을 이용하면 이미 만들어진 테마를 쉽게 디자인할 수 있다. [Jekyll 테마][jekyll-themes] 사이트에서 원하는 테마를 선택하여 다운로드 한다. 이 중에서 내가 선택한 테마는 [Plainwhite][Plainwhite]이다. 
+
+<img src="../assets/post_pics/jekyll_themes_plainwhite.PNG">
+
+다운받은 파일을 압축을 풀고 아까 clone한 폴더에 모든 파일을 옮긴다.
+
+<img src="../assets/post_pics/clone_folder.PNG">
+
+
+4. Ruby 설치
+
+Jekyll이 Ruby로 만들어졌기 때문에 윈도우 OS의 경우 Ruby Devkit이 필요하다. [Ruby Installer][Ruby-Installer] 사이트에서 => 표시된 Ruby+Devkit를 설치한다.
+
+<img src="../assets/post_pics/ruby_installer.PNG">
+
+5. Jekyll 설치
+
+3번에서는 Jekyll 테마를 설치했을 뿐이고, 이번에는 Ruby를 통해 Jekyll을 설치해야 한다.
+
+<img src="../assets/post_pics/command_ruby.PNG">
+
+Ruby 콘솔창에서 다음 명령어로 Jekyll에 필요한 패키지들을 설치한다.
+
+```python
+gem install jekyll
+gem install minima
+gem install bundler
+gem install jekyll-feed
+gem install tzinfo-data
+```
+
+6. 테마 적용하기
+
+Jekyll 테마 파일 중 `_config.yml`에서 자신의 정보로 수정한 후 테마를 적용하면 된다. 테마를 적용하는 방법은 지금까지 파일들을 Github에 push 해주는 것이다.
+
+간단하게 vscode에서 push 하는 방법을 소개하자면 
+
+[jekyll-themes] : http://jekyllthemes.org/
+[Plainwhite] : http://jekyllthemes.org/themes/PlainWhite-Jekyll/
+[Ruby-Installer] : https://rubyinstaller.org/downloads/
+
+
 
