--- a/_posts/2021-02-15-github.io만들기.markdown
+++ b/_posts/2021-02-15-github.io만들기.markdown
@@ -17,7 +17,7 @@ categories: github.io Jekyll Ruby
 
 ![](https://github.com/mmminji/mmminji.github.io/blob/main/assets/post_pics/Create_a_new_repository.PNG?raw=true)
 
-새로운 repository 이름을 [아이디].github.io로 지정하여 생성한다. README 파일은 먼저 만들어 두면 편하다.
+새로운 repository 이름을 [아이디].github.io로 지정하여 생성한다. README 파일은 자동으로 만들어 두면 편하다.
 
 ## 2. Clone
 
