--- a/_posts/2021-02-15-github.io만들기.markdown
+++ b/_posts/2021-02-15-github.io만들기.markdown
@@ -8,7 +8,7 @@ categories: github.io Jekyll Ruby
 
 다른 블로그에 비해 알아야 할 것이 많아 미뤄왔던 Github 블로그를 드디어 시작해보려고 한다. \^o^/
 
-내가 블로그를 하고 싶었던 이유는 나만의 템플릿을 만들고 싶었기 때문이다. 검색을 하다보면 하나의 글만으로 내가 원하는 것을 해결하기는 어려웠다. 그럴때마다 여러 블로그를 돌아다니며 시도해보고 매번 같은 블로그를 열었다 닫으며 고생했던 적이 많다. 그래서 내가 하는 모든 과정을 블로그로 기록하여 **나중에 똑같은 과정을 반복할 나에게, 나와 같은 고민을 하는 사람들에게** 가이드를 제공하고 싶었다. 앞으로의 포스팅은 무언가 인수인계하듯이 모든 과정을 하나씩 기록해나갈 예정이다.
+내가 블로그를 하고 싶었던 이유는 나만의 템플릿을 만들고 싶었기 때문이다. 검색을 하다보면 하나의 글만으로 내가 원하는 것을 해결하기는 어려웠다. 그럴때마다 여러 블로그를 돌아다니며 시도해보고 매번 같은 블로그를 열었다 닫으며 고생했던 적이 많다. 그래서 내가 하는 모든 과정을 블로그로 기록하여 **나중에 똑같은 과정을 반복할 나에게, 나와 같은 고민을 하는 사람들에게** 가이드를 제공하고 싶었다. 앞으로의 포스팅은 튜토리얼처럼 모든 과정을 따라할 수 있도록 기록해나갈 예정이다.
 
 본격적으로 첫 게시물인만큼 이 글을 쓰기까지의 과정, 즉 Github 블로그 만들기를 하나씩 소개해보려고 한다.
 
