--- a/_posts/2021-06-21-선통머9장.markdown
+++ b/_posts/2021-06-21-선통머9장.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "선형대수와 통계학으로 배우는 머신러닝 with 파이썬 9장"
+title:  "앙상블 학습"
 date:   2021-06-21
 categories: Ensemble Voting Bagging Boosting Stacking 
 ---
