--- a/_posts/2021-05-11-선통머7장.markdown
+++ b/_posts/2021-05-11-선통머7장.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "선형대수와 통계학으로 배우는 머신러닝 with 파이썬 7장"
+title:  "모형 평가"
 date:   2021-05-11
 categories: MachineLearning Fitting CrossValidation Pipeline GridSearch Loss EvalMetrics
 ---
