change sub title

--- a/_posts/2021-02-15-github.io만들기.markdown
+++ b/_posts/2021-02-15-github.io만들기.markdown
@@ -4,7 +4,7 @@ title:  "github 블로그 만들기"
 date:   2021-02-15 18:50:15
 categories: github.io Jekyll Ruby
 ---
-"하나씩 꾸미면서 글을 작성한다는 것에 겁먹고 시작하지 못했던 일"
+[Guide] "하나씩 꾸미면서 글을 작성한다는 것에 겁먹고 시작하지 못했던 일"
 
 다른 블로그에 비해 알아야 할 것이 많아 미뤄왔던 Github 블로그를 드디어 시작해보려고 한다. \^o^/
 
