--- a/_posts/2021-05-10-선통머6장.markdown
+++ b/_posts/2021-05-10-선통머6장.markdown
@@ -30,4 +30,4 @@ Data Scaling이란, 변수들이 각각 다른 단위를 가지기 때문에 단
 - Normalizer (노멀 스케일링) : 벡터의 유클리디안 길이가 1이 되도록 길이 상관없이 방향만 고려하는 방법(행 기준)
 
 
-이 내용은 **선형대수와 통계학으로 배우는 머신러닝 with 파이썬 : 최적화 개념부터 텐서플로를 활용한 딥러닝까지** 책을 기반으로 공부한 자료입니다.
+이 내용은 **선형대수와 통계학으로 배우는 머신러닝 with 파이썬 : 최적화 개념부터 텐서플로를 활용한 딥러닝까지** 책을 기반으로 공부한 자료이다.
