--- a/_posts/2021-05-11-선통머7장.markdown
+++ b/_posts/2021-05-11-선통머7장.markdown
@@ -84,4 +84,4 @@ Entropy는 정보 이론에서 확률 변수의 불확실성을 나타내는 개
 - 실루엣 스코어(Silhouette score) : 서로 다른 군집이 얼마나 잘 분리되는지 나타내는 지표, 같은 군집의 데이터는 뭉쳐 있고 다른 군집의 데이터는 떨어져 있을수록 높은 점수
 
 
-이 내용은 **선형대수와 통계학으로 배우는 머신러닝 with 파이썬 : 최적화 개념부터 텐서플로를 활용한 딥러닝까지** 책을 기반으로 공부한 자료입니다.
+이 내용은 **선형대수와 통계학으로 배우는 머신러닝 with 파이썬 : 최적화 개념부터 텐서플로를 활용한 딥러닝까지** 책을 기반으로 공부한 자료이다.
