--- a/_posts/2021-06-14-선통머8장.markdown
+++ b/_posts/2021-06-14-선통머8장.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "지도 학습"
 date:   2021-06-14
-categories: kNN LinearRegression LogisticRegression NaiveBayes DecisionTree SupportVectorMachine
+categories: kNN LinearRegression LogisticRegression NaiveBayes DecisionTree SVM
 ---
 [Book Review] 한줄정리
 
@@ -55,4 +55,4 @@ Support Vector Machine(SVm, 서포트 벡터 머신)이란, 서포트 벡터 간
 ## 8.9 크로스 밸리데이션 실습 [>코드<](https://github.com/mmminji/ML-DL-STUDY/blob/master/선형대수와%20통계학으로%20배우는%20머신러닝%20with%20파이썬/8.9.CrossValidation.py)
 
 
-이 내용은 **선형대수와 통계학으로 배우는 머신러닝 with 파이썬 : 최적화 개념부터 텐서플로를 활용한 딥러닝까지** 책을 기반으로 공부한 자료입니다.
+이 내용은 **선형대수와 통계학으로 배우는 머신러닝 with 파이썬 : 최적화 개념부터 텐서플로를 활용한 딥러닝까지** 책을 기반으로 공부한 자료이다.
