--- a/_posts/2022-03-15-리눅스.markdown
+++ b/_posts/2022-03-15-리눅스.markdown
@@ -34,9 +34,12 @@ categories: Linux
     |dd|현재행 삭제|[n]dd|아래 n개 행 삭제|
     |p|위쪽으로 행 붙여넣기|P|아래쪽으로 행 붙여넣기|
 - 명령모드
+    | 명령어 | 의미 | 명령어 | 의미 |
+    |:---:|---|:---:|---|
     |:sec ic|검색에서 대소문자 구분 안함|:set noic|검색에서 대소문자 구분함
     |/|아래로 검색|?|위로 검색|
     |n|다음 문자열 검색|N|이전 문자열 검색|
     |:%s /str1/str2 /g|str1을 str2로 치환|||
     |:set nu|행 번호 표시|:set nonu|행 번호 숨기기|
     |:set list|Tab 문자나 개행 문자 표시|:set nolist|Tab 문자나 개행 문자 숨기기|
+    |:w|문서 저장|:w!|강제 문서 저장|
