--- a/_posts/2022-03-15-리눅스.markdown
+++ b/_posts/2022-03-15-리눅스.markdown
@@ -76,7 +76,11 @@ grep 명령어와 정규식을 함께 사용하면 정규식에 표현된 문자
 |{n,m}|n이상 m미만||
 |^()|문장시작||
 |\||또는||
-grep 명령어와 정규식을 함께 사용하면 정규식에 표현된 문자열을 문서 내에서 찾을 수 있다.
+
+```console
+grep '[xX][0-9a-z]{2}' *
+# X11
+```
 
 ## 3. 기본 명령어
 프롬프트는 #(root 사용자)와 $(일반 사용자)로 명령을 수행할 수 있다. Tab키는 자동 완성 기능이 있으며, 도스키 기능은 상하 화살표 키를 이용해서 이전 명령어를 다시 실행하는 것이다. 
@@ -108,10 +112,6 @@ chgrp [옵션] [사용자 계정] [파일명]
 chgrp [옵션] [그룹명] [파일명]
 ```
 - chmod : 파일 및 디렉토리의 소유와 허가권을 변경한다.
-```console
-chmod [접근 권한 설정] [파일명]
-```
-![](https://github.com/mmminji/mmminji.github.io/blob/main/assets/post_pics/Linux-chmod?raw=true){: width="800" height="1400"}  
     - 기호모드 : 사용자,연산자,접근권한 순서로 표현한다.
         |사용자|연산자|접근권한|
         |:---:|:---:|:---:|
@@ -120,7 +120,10 @@ chmod [접근 권한 설정] [파일명]
         |o(기타사용자)|x(실행)|=(설정)|
         |a(전체)|||
     - 숫자 모드 : 세자리의 수로 표현하며, 각 자리의 숫자는 4(읽기), 2(쓰기), 1(실행)의 합으로 나타낸다.
-
+![](https://github.com/mmminji/mmminji.github.io/blob/main/assets/post_pics/Linux-chmod?raw=true){: width="800" height="1400"}  
+```console
+chmod [접근 권한 설정] [파일명]
+```
 
 ## 5. 파일 압축 및 묶기
 
