--- a/_posts/2022-03-15-리눅스.markdown
+++ b/_posts/2022-03-15-리눅스.markdown
@@ -78,8 +78,7 @@ grep 명령어와 정규식을 함께 사용하면 정규식에 표현된 문자
 |\||또는||
 
 ```console
-grep '[xX][0-9a-z]{2}' *
-# X11
+grep '[xX][0-9a-z]{2}' *       # X11
 ```
 
 ## 3. 기본 명령어
