--- a/_posts/2021-07-30-가짜연블로그제작기.markdown
+++ b/_posts/2021-07-30-가짜연블로그제작기.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "가짜연구소 블로그 제작기"
+title:  "가짜연구소 블로그 제작기 & HTML"
 date:   2021-07-30  
 categories: 가짜연구소블로그 HTML CSS 
 ---
