--- a/_posts/2022-03-27-PyTorch 기본.markdown
+++ b/_posts/2022-03-27-PyTorch 기본.markdown
@@ -139,6 +139,78 @@ for i, data in enumerate(testloader, 0):
 accuracy = 100*correct/total
 ```
 
+## 3. Convolutional Neural Networks (CNNs)
+
+### Convolution operator
+fully-connected 신경망은 모든 features 사이의 관계를 고려하기 때문에 연산이 너무 커져 비효율적이고 파라미터가 많아 과적합될 수도 있다. 이를 해결하기 위한 Convolution은 일부의 features만 연결하고 가중치를 공유하도록 한다.  
+Convolution filter는 입력과 depth의 차원이 일치해야 하며, 이미지와 필터 사이의 원소곱으로 계산된다. 관련 용어들은 [이 페이지](https://mmminji.github.io/cnn/kernel/padding/stride/pooling/channel/2021/06/24/%EC%84%A0%ED%86%B5%EB%A8%B812%EC%9E%A5(2).html)에서 확인할 수 있다.  
+PyTorch의 두 가지 모듈이 Convolution 연산을 제공하고 있다.  
+- torch.nn : Conv2d 연산 내에서 필터를 설정
+```python
+import torch
+import torch.nn
+
+image = torch.rand(16, 3, 32, 32)
+conv_filter = torch.nn.Conv2d(in_channels=3, out_channels=1, kernel_size=5, stride=1, padding=0)
+output_feature = conv_filter(image)
+```
+- torch.nn.functional : 필터를 따로 선언하고 conv2d 연산 수행
+```python
+import torch
+import torch.nn.functional as F
+
+image = torch.rand(16, 3, 32, 32)
+filters = torch.rand(1, 3, 5, 5)
+out_feat_F = F.conv2d(image, filters, stride=1, padding=0)
+```
+Convolution 연산 후의 이미지 사이즈는 다음과 같이 계산한다.
+<img src="https://latex.codecogs.com/svg.image?\inline&space;\LARGE&space;output&space;=&space;\frac{input&plus;2*padding-filter}{stride}" title="https://latex.codecogs.com/svg.image?\inline \LARGE output = \frac{input+2*padding-filter}{stride}" />
+
+
+### Pooling operator
+Pooling은 단순히 크기를 줄이는 것으로 연산을 더 효율적이게 하고 이미지의 이동에 대해 모델을 더 robust하게 한다. 대표적으로 Max-Pooling과 Average-Pooling이 있다.
+- Max-Pooling
+```python
+max_pooling = torch.nn.MaxPool2d(2)
+output_feature = max_pooling(image)
+
+out_feat_F = F.max_pool2d(image, 2)
+```
+- Average-Pooling
+```python
+avg_pooling = torch.nn.AvgPool2d(2)
+output_feature = avg_pooling(image)
+
+out_feat_F = F.avg_pool2d(image, 2)
+```
+
+### Build a Convolutional Neural Network
+```python
+class Net(nn.Module):
+    def __init__(self, num_classes):
+        super(Net, self).__init__()
+		
+        self.relu = nn.ReLU()
+        
+        self.conv1 = nn.Conv2d(in_channels=1, out_channels=5, kernel_size=3, padding=1)
+        self.conv2 = nn.Conv2d(in_channels=5, out_channels=10, kernel_size=3, padding=1)
+
+        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)  # 크기의 절반이 되도록
+        
+        self.fc = nn.Linear(10*7*7, 10)  # pool을 두번 거쳤기 때문에
+
+    def forward(self, x):
+
+        x = self.relu(self.conv1(x))     # (1, 28, 28) -> (5, 28, 28)
+        x = self.pool(x)                 # (5, 28, 28) -> (5, 14, 14)
+
+        x = self.relu(self.conv2(x))     # (5, 14, 14) -> (10, 14, 14)
+        x = self.pool(x)                 # (10, 14, 14) -> (10, 7, 7)
+
+        x = x.view(-1, 10*7*7)
+
+        return self.fc(x)
+```
 
 
 이 내용은 **DataCamp의 Introduction to Deep Learning with PyTorch** 강의를 기반으로 공부한 자료이다.
