--- a/_posts/2022-03-27-PyTorch 기본.markdown
+++ b/_posts/2022-03-27-PyTorch 기본.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "PyTorch 기본"
 date:   2022-03-27 
-categories: PyTorch DeepLearning 
+categories: PyTorch DeepLearning ANN CNN
 ---
 [Lecture Review] 한줄정리
 
