--- a/_posts/2022-03-27-PyTorch 기본.markdown
+++ b/_posts/2022-03-27-PyTorch 기본.markdown
@@ -170,7 +170,7 @@ out_feat_F = F.conv2d(image, filters, stride=1, padding=0)
 ```
 
 Convolution 연산 후의 이미지 사이즈는 다음과 같이 계산한다.  
-<p align="center"><img src="https://latex.codecogs.com/svg.image?output&space;=&space;\frac{input&plus;2*padding-filter}{stride}" title="https://latex.codecogs.com/svg.image?output = \frac{input+2*padding-filter}{stride}" /></p>
+<p align="center"><img src="https://latex.codecogs.com/svg.image?\frac{input&plus;2*padding-filter}{stride}&plus;1" title="https://latex.codecogs.com/svg.image?\frac{input+2*padding-filter}{stride}+1" /></p>
 
 
 ### - Pooling operator
@@ -222,5 +222,75 @@ class Net(nn.Module):
         return self.fc(x)
 ```
 
+## 4. Using Convolutional Neural Networks
 
-이 내용은 **DataCamp의 Introduction to Deep Learning with PyTorch** 강의를 기반으로 공부한 자료이다.
+### - The Sequential Module
+위처럼 모든 layer를 개별적으로 선언하고 순차적으로 적용할 수 있다. 하지만 좀 더 효율적이고 간단하게 하려면 순차 모듈로 캡슐화하여 여러 layer를 한 번에 쌓는 방법이 있다.
+```python
+class Net(nn.Module):
+    def __init__(self):
+        super(Net, self).__init__()
+        
+        self.features = nn.Sequential(nn.Conv2d(in_channels=1, out_channels=5, kernel_size=3, padding=1), 
+                                      nn.ReLU(inplace=True),
+                                      nn.Conv2d(in_channels=5, out_channels=10, kernel_size=3, padding=1), 
+                                      nn.MaxPool2d(2, 2), nn.ReLU(inplace=True))
+
+        self.classifier = nn.Sequential(nn.Linear(14 * 14 * 10, 1024), nn.ReLU(inplace=True),
+                                       	nn.Linear(1024, 2048), nn.ReLU(inplace=True),
+                                        nn.Linear(2048, 10))
+
+    def forward(self, x):
+      
+        x = self.features(x)
+        x = x.view(-1, 14 * 14 * 10)
+        x = self.classifier(x)
+        return x
+```
+
+### - The problem of overfitting
+모델은 훈련 세트 내에서 학습하지만 실제로는 테스트 세트의 성능이 얼마나 좋은지, 즉 일반화 성능이 더 중요하다. 일반화 성능이 떨어지는 것을 과적합이라고 부르며, 알고리즘의 정확도를 플로팅하여 알 수 있다. 훈련 세트의 정확도와 테스트 세트의 정확도의 차이가 적어야 하는 것이다.  
+테스트 세트의 과적합을 줄이는 방법 중 하나는 검증 세트를 만드는 것이다. 테스트 세트가 여러 번 사용되면 이는 이미 오염되어 신뢰할 수 없는 결과를 가져온다. 따라서 모델을 선정해주는 검증 세트를 따로 두고 가장 좋은 모델을 골라 테스트 세트를 확인한다. 이 때 검증 세트와 테스트 세트는 서로 겹치면 안된다.
+```python
+indices = np.arange(60000)
+np.random.shuffle(indices)
+
+train_loader = torch.utils.data.DataLoader(datasets.MNIST('mnist', download=True, train=True, transform=transform),
+                                             batch_size=64, shuffle=False, sampler=torch.utils.data.SubsetRandomSampler(indices[:55000]))
+val_loader = torch.utils.data.DataLoader(datasets.MNIST('mnist', download=True, train=True, transform=transform),
+                                             batch_size=64, shuffle=False, sampler=torch.utils.data.SubsetRandomSampler(indices[55000:]))
+```
+
+### - Regularization techniques
+- L2 regularization : 큰 가중치에 대한 패널티를 손실 함수에 추가하는 방법 (weight_decay 추가)
+```python
+optim.Adam(net.parameters(), lr=3e-4, weight_decay=0.0001)
+```
+- Dropout : 몇 개의 노드를 제거하여 연산에서 제외시키는 방법, 제거되는 노드는 학습이 반복될 때마다 바뀜, 일반적으로 fc layer에서 사용
+```python
+nn.Dropout(p=0.5)
+```
+- Batch normalization : 각 배치별 평균과 분산을 구해 표준화시키는 방법
+```python
+nn.BatchNorm2d(num_features=64, eps=1e-05, momentum=0.9)  # num_features는 채널수
+```
+- Early stopping : 검증 세트의 정확성을 확인하고 성능이 좋아지지 않으면 학습을 종료시키는 방법
+
+### - Transfer Learning
+ImageNet과 같은 큰 데이터 세트로 학습된 모델을 가져와 다시 학습시키는 방법이다. 시간도 절약하고 작은 데이터 세트에서도 신경망을 사용할 수 있다는 장점이 있다.
+```python
+model = Net()
+model.load_state_dict(torch.laod('cifar10_ent.pth'))
+for param in model.parameters():   # 모든 가중치를 고정시키려면
+    param.requires_grad = False
+model.fc = nn.Linear(4*4*1024, 100)
+model.train()
+```
+torchvision 라이브러리를 사용하면 사전훈련된 모델을 한 번에 가져올 수 있다.
+```python
+import torchvision
+model = torchvision.models.resnet18(pretrained=True)
+model.fc = nn.Linear(512, num_classes)
+```
+
+이 내용은 가짜연구소에서 DSF프로그램으로 수강한 DataCamp의 **Introduction to Deep Learning with PyTorch** 강의를 기반으로 공부한 자료이다. 
