--- a/_posts/2022-03-27-PyTorch 기본.markdown
+++ b/_posts/2022-03-27-PyTorch 기본.markdown
@@ -174,7 +174,8 @@ Convolution 연산 후의 이미지 사이즈는 다음과 같이 계산한다.
 
 
 ### - Pooling operator
-Pooling은 단순히 크기를 줄이는 것으로 연산을 더 효율적이게 하고 이미지의 이동에 대해 모델을 더 robust하게 한다. 대표적으로 Max-Pooling과 Average-Pooling이 있다.
+Pooling은 단순히 크기를 줄이는 것으로 연산을 더 효율적이게 하고 이미지의 이동에 대해 모델을 더 robust하게 한다.  
+대표적으로 Max-Pooling과 Average-Pooling이 있다.
 
 - Max-Pooling  
 
@@ -249,7 +250,7 @@ class Net(nn.Module):
 ```
 
 ### - The problem of overfitting
-모델은 훈련 세트 내에서 학습하지만 실제로는 테스트 세트의 성능이 얼마나 좋은지, 즉 일반화 성능이 더 중요하다. 일반화 성능이 떨어지는 것을 과적합이라고 부르며, 알고리즘의 정확도를 플로팅하여 알 수 있다. 훈련 세트의 정확도와 테스트 세트의 정확도의 차이가 적어야 하는 것이다.  
+모델은 훈련 세트 내에서 학습하지만 실제로는 테스트 세트의 성능이 얼마나 좋은지, 즉 일반화 성능이 더 중요하다. 일반화 성능이 떨어지는 것을 과적합이라고 부르며, 알고리즘의 정확도를 플로팅하여 훈련 세트의 정확도와 테스트 세트의 정확도의 차이가 크면 과적합이라고 판단한다.
 테스트 세트의 과적합을 줄이는 방법 중 하나는 검증 세트를 만드는 것이다. 테스트 세트가 여러 번 사용되면 이는 이미 오염되어 신뢰할 수 없는 결과를 가져온다. 따라서 모델을 선정해주는 검증 세트를 따로 두고 가장 좋은 모델을 골라 테스트 세트를 확인한다. 이 때 검증 세트와 테스트 세트는 서로 겹치면 안된다.
 ```python
 indices = np.arange(60000)
